test/spec/multi-value/func.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/multi-value/func.wast
;;; ARGS*: --enable-multi-value
(;; STDOUT ;;;
out/test/spec/multi-value/func.wast:436: assert_invalid passed:
  000001a: error: invalid function signature index: 2
out/test/spec/multi-value/func.wast:520: assert_malformed passed:
  out/test/spec/multi-value/func/func.4.wat:1:76: error: unexpected token "param", expected an instr.
  ... i32) (result i32)))(func (type $sig) (result i32) (param i32) (i32.const 0))
                                                         ^^^^^
out/test/spec/multi-value/func.wast:527: assert_malformed passed:
  out/test/spec/multi-value/func/func.5.wat:1:63: error: unexpected token "type", expected an instr.
  ... i32) (result i32)))(func (param i32) (type $sig) (result i32) (i32.const 0))
                                            ^^^^
out/test/spec/multi-value/func.wast:534: assert_malformed passed:
  out/test/spec/multi-value/func/func.6.wat:1:76: error: unexpected token "type", expected an instr.
  ... i32) (result i32)))(func (param i32) (result i32) (type $sig) (i32.const 0))
                                                         ^^^^
out/test/spec/multi-value/func.wast:541: assert_malformed passed:
  out/test/spec/multi-value/func/func.7.wat:1:64: error: unexpected token "type", expected an instr.
  ... i32) (result i32)))(func (result i32) (type $sig) (param i32) (i32.const 0))
                                             ^^^^
out/test/spec/multi-value/func.wast:548: assert_malformed passed:
  out/test/spec/multi-value/func/func.8.wat:1:64: error: unexpected token "param", expected an instr.
  ... i32) (result i32)))(func (result i32) (param i32) (type $sig) (i32.const 0))
                                             ^^^^^
  out/test/spec/multi-value/func/func.8.wat:1:85: error: unexpected token ), expected (.
  ... i32) (result i32)))(func (result i32) (param i32) (type $sig) (i32.const 0))
                                                                  ^
out/test/spec/multi-value/func.wast:555: assert_malformed passed:
  out/test/spec/multi-value/func/func.9.wat:1:21: error: unexpected token "param", expected an instr.
  (func (result i32) (param i32) (i32.const 0))
                      ^^^^^
out/test/spec/multi-value/func.wast:562: assert_malformed passed:
  out/test/spec/multi-value/func/func.10.wat:1:20: error: expected 0 results, got 1
  (type $sig (func))(func (type $sig) (result i32) (i32.const 0))
                     ^^^^
out/test/spec/multi-value/func.wast:569: assert_malformed passed:
  out/test/spec/multi-value/func/func.11.wat:1:45: error: expected 1 arguments, got 0
  ...g (func (param i32) (result i32)))(func (type $sig) (result i32) (i32.cons...
                                        ^^^^
out/test/spec/multi-value/func.wast:576: assert_malformed passed:
  out/test/spec/multi-value/func/func.12.wat:1:45: error: expected 1 results, got 0
  ...g (func (param i32) (result i32)))(func (type $sig) (param i32) (i32.const...
                                        ^^^^
out/test/spec/multi-value/func.wast:583: assert_malformed passed:
  out/test/spec/multi-value/func/func.13.wat:1:49: error: expected 2 arguments, got 1
  ...unc (param i32 i32) (result i32)))(func (type $sig) (param i32) (result i3...
                                        ^^^^
out/test/spec/multi-value/func.wast:594: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [i32]
  000001d: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:598: assert_invalid passed:
  error: type mismatch in i32.eqz, expected [i32] but got [f32]
  000001c: error: OnConvertExpr callback failed
out/test/spec/multi-value/func.wast:602: assert_invalid passed:
  error: type mismatch in f64.neg, expected [f64] but got [i64]
  000001e: error: OnUnaryExpr callback failed
out/test/spec/multi-value/func.wast:610: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got [i32]
  000001c: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:614: assert_invalid passed:
  error: type mismatch in i32.eqz, expected [i32] but got [f32]
  000001b: error: OnConvertExpr callback failed
out/test/spec/multi-value/func.wast:618: assert_invalid passed:
  error: type mismatch in f64.neg, expected [f64] but got [i64]
  000001c: error: OnUnaryExpr callback failed
out/test/spec/multi-value/func.wast:626: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  0000019: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:630: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  0000019: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:634: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  0000019: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:638: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  0000019: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:642: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64, i32] but got []
  000001a: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:647: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001a: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:653: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32, i32] but got []
  000001b: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:659: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32]
  000001a: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:665: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32, i64]
  000001c: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:671: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [f32]
  000001e: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:677: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32, f32] but got [f32]
  000001f: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:683: assert_invalid passed:
  error: type mismatch in function, expected [] but got [f32]
  0000023: error: EndFunctionBody callback failed
out/test/spec/multi-value/func.wast:690: assert_invalid passed:
  error: type mismatch in return, expected [i32] but got []
  0000019: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:696: assert_invalid passed:
  error: type mismatch in return, expected [i32, i32] but got []
  000001a: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:702: assert_invalid passed:
  error: type mismatch in return, expected [i32] but got []
  000001a: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:708: assert_invalid passed:
  error: type mismatch in return, expected [i32, i64] but got []
  000001b: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:714: assert_invalid passed:
  error: type mismatch in return, expected [i32] but got [i64]
  000001b: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:720: assert_invalid passed:
  error: type mismatch in return, expected [i64, i64] but got [i64]
  000001c: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:727: assert_invalid passed:
  error: type mismatch in return, expected [i32] but got []
  0000019: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:733: assert_invalid passed:
  error: type mismatch in return, expected [i32, i32] but got []
  000001a: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:739: assert_invalid passed:
  error: type mismatch in return, expected [i32, i32] but got [i32]
  000001c: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:745: assert_invalid passed:
  error: type mismatch in return, expected [i32] but got []
  000001a: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:751: assert_invalid passed:
  error: type mismatch in return, expected [i32, i32] but got []
  000001b: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:757: assert_invalid passed:
  error: type mismatch in return, expected [i32] but got [i64]
  000001b: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:763: assert_invalid passed:
  error: type mismatch in return, expected [i32, i32] but got [i64]
  000001c: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:769: assert_invalid passed:
  error: type mismatch in return, expected [i32] but got [i64]
  000001b: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:775: assert_invalid passed:
  error: type mismatch in return, expected [i32, i32] but got [i32]
  000001c: error: OnReturnExpr callback failed
out/test/spec/multi-value/func.wast:782: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001a: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:788: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  000001b: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:794: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [f32]
  000001f: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:800: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got [i32]
  000001d: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:806: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001a: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:812: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  000001b: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:818: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001c: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:824: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got [i32]
  000001d: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:830: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001c: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:837: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001c: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:843: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:849: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001d: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:855: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:861: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  000001e: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:867: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got [i32]
  000001f: error: OnBrExpr callback failed
out/test/spec/multi-value/func.wast:877: assert_malformed passed:
  out/test/spec/multi-value/func/func.62.wat:1:14: error: unexpected token "local", expected an instr.
  (func (nop) (local i32))
               ^^^^^
out/test/spec/multi-value/func.wast:881: assert_malformed passed:
  out/test/spec/multi-value/func/func.63.wat:1:14: error: unexpected token "param", expected an instr.
  (func (nop) (param i32))
               ^^^^^
out/test/spec/multi-value/func.wast:885: assert_malformed passed:
  out/test/spec/multi-value/func/func.64.wat:1:14: error: unexpected token "result", expected an instr.
  (func (nop) (result i32))
               ^^^^^^
out/test/spec/multi-value/func.wast:889: assert_malformed passed:
  out/test/spec/multi-value/func/func.65.wat:1:20: error: unexpected token "param", expected an instr.
  (func (local i32) (param i32))
                     ^^^^^
out/test/spec/multi-value/func.wast:893: assert_malformed passed:
  out/test/spec/multi-value/func/func.66.wat:1:20: error: unexpected token "result", expected an instr.
  (func (local i32) (result i32) (get_local 0))
                     ^^^^^^
out/test/spec/multi-value/func.wast:897: assert_malformed passed:
  out/test/spec/multi-value/func/func.67.wat:1:21: error: unexpected token "param", expected an instr.
  (func (result i32) (param i32) (get_local 0))
                      ^^^^^
158/158 tests passed.
;;; STDOUT ;;)
